<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/olive"
    tools:context=".AddStudyGrp">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gidugu"
        android:text="Create Study Group"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009">

    </TextView>

    <View
        android:id="@+id/view"
        android:layout_width="370dp"
        android:layout_height="467dp"
        android:background="@drawable/whitebox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633">
    </View>

    <AutoCompleteTextView
        android:id="@+id/courseName"
        android:layout_width="341dp"
        android:layout_height="53dp"
        android:background="#D3D3D3"
        android:completionThreshold="1"
        android:dropDownWidth="match_parent"
        android:dropDownHeight="wrap_content"
        android:hint="Search Course..."
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.045">

    </AutoCompleteTextView>

    <EditText
        android:id="@+id/groupName"
        android:layout_width="341dp"
        android:layout_height="55dp"
        android:background="#D3D3D3"
        android:hint="Enter Group Name..."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.2">

    </EditText>

    <EditText
        android:id="@+id/numberofmembers"
        android:layout_width="213dp"
        android:layout_height="41dp"
        android:background="#D3D3D3"
        android:hint="Enter Number of Users..."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514">

    </EditText>

    <ImageButton
        android:id="@+id/decreaseCount"
        android:layout_width="50dp"
        android:layout_height="37dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/baseline_expand_more"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <ImageButton
        android:id="@+id/increaseCount"
        android:layout_width="50dp"
        android:layout_height="37dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/baseline_expand_less"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <EditText
        android:id="@+id/grpDescription"
        android:layout_width="338dp"
        android:layout_height="181dp"
        android:background="#D3D3D3"
        android:gravity="top"
        android:hint="Enter Description..."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79">

    </EditText>

    <Button
        android:id="@+id/createGroup"
        android:layout_width="194dp"
        android:layout_height="42dp"
        android:text="Create Group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

</androidx.constraintlayout.widget.ConstraintLayout>