...
    <!-- Other Options -->
    <!-- Add your other options (buttons, text, etc.) here -->
    <!-- Example Button -->
    <!-- Rectangle Container for Text Views -->

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/circle_background"
        android:longClickable="true"
        android:src="@drawable/profileimage"
...
                android:textSize="16sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="Log out"
                android:id="@+id/logout_button"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                app:cornerRadius="20dp" />

            <Button
                android:layout_width="match_parent"
...
